[gd_scene load_steps=4 format=3 uid="uid://utngjrmnrwwd"]

[ext_resource type="Script" path="res://ui/game_over_screen.gd" id="1_5q6nj"]
[ext_resource type="FontFile" uid="uid://vgwftrbwtm12" path="res://assets/RobotoMono-Regular.ttf" id="2_jbd0s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ojhc3"]
bg_color = Color(0.213417, 0.26, 0.195, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.0784, 0.14, 0.104067, 1)

[node name="GameOverScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_5q6nj")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ojhc3")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="Rows" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2
theme_override_colors/font_color = Color(0.776471, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_jbd0s")
theme_override_font_sizes/font_size = 64
text = "GAME OVER"
horizontal_alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/Rows"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/Rows/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="ButtonRestart" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jbd0s")
theme_override_font_sizes/font_size = 36
text = " RESTART "

[node name="ButtonMainMenu" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jbd0s")
theme_override_font_sizes/font_size = 36
text = " MAIN MENU "

[node name="ButtonQuit" type="Button" parent="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_jbd0s")
theme_override_font_sizes/font_size = 36
text = "QUIT"

[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/ButtonRestart" to="." method="_on_button_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/ButtonMainMenu" to="." method="_on_button_main_menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Rows/CenterContainer/VBoxContainer/ButtonQuit" to="." method="_on_button_quit_pressed"]
